# rust-servers

./: .gitignore  README.md
ch02-web_server/scenario1/: Cargo.toml
ch02-web_server/scenario1/http/src/: httprequest.rs  httpresponse.rs
ch02-web_server/scenario1/httpserver/: Cargo.toml
ch02-web_server/scenario1/httpserver/data/: orders.json
ch02-web_server/scenario1/httpserver/public/: styles.css
ch02-web_server/scenario1/httpserver/src/: handler.rs  main.rs  router.rs  server.rs
ezytutors/: Cargo.toml  README.md
ezytutors/tutor-db/: Cargo.toml
ezytutors/tutor-db/src/: database.sql
ezytutors/tutor-db/src/iter2/: handlers.rs
ezytutors/tutor-db/src/iter3/: db_access.rs  handlers.rs
ezytutors/tutor-db/src/iter4/: db_access.rs  errors.rs  handlers.rs
ezytutors/tutor-db/src/iter5/: errors.rs
ezytutors/tutor-db/src/iter5/dbaccess/: course.rs  mod.rs  tutor.rs
ezytutors/tutor-db/src/iter5/dbscripts/: course.sql  tutor-course.sql
ezytutors/tutor-db/src/iter5/handlers/: course.rs  general.rs  tutor.rs
ezytutors/tutor-db/src/iter5/models/: course.rs  tutor.rs
ezytutors/tutor-nodb/: Cargo.toml
ezytutors/tutor-nodb/src/: handlers.rs
