[package]
name = "tutor-nodb"
version = "0.1.0"
authors = ["Todd Leonhardt"]
edition = "2021"
default-run = "tutor-service"

[[bin]]
name = "basic-server"

[[bin]]
name = "tutor-service"

[dependencies]
actix-web = "4.4.0"
actix-rt = "2.9.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
